login and sign pages created

--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
 
         <div class="header3">
           <a href="#">Ara</a>
-          <a href="#">Giriş Yap</a>
+          <a href="login_sign.html">Giriş Yap</a>
           <a href="#">Yardım</a>
-          <a href="#">Kayıt</a>
+          <a href="sign.html">Kayıt</a>
         </div>
       </div>
     </header>
