--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div id="show_kadin_products">
       <ul class="list_no_underline">
-        <li>Yeni Gelenler</li>
+        <li><a href="base_urunler.html">Yeni Gelenler</a></li>
         <li>Çok Satanlar</li>
         <li>Basic</li>
         <li>Kaban</li>
@@ -113,7 +113,7 @@
         </div>
 
         <div id="header2">
-          <p>ZARA</p>
+          <a href="index.html"><p>ZARA</p></a>
         </div>
 
         <div class="header3">
