--- a/login_sign.html
+++ b/login_sign.html
@@ -113,7 +113,7 @@
         </div>
 
         <div id="header2">
-          <p>ZARA</p>
+          <a href="index.html"><p>ZARA</p></a>
         </div>
 
         <div class="header3">
@@ -142,7 +142,12 @@
           class="login_input"
         />
         <span class="forget_password">Parolanızı mı Unuttunuz ?</span>
-        <button class="login_sign_button"><span> Giriş Yap</span></button>
+        <button
+          class="login_sign_button"
+          onclick="location.href='base_urunler.html';"
+        >
+          <span> Giriş Yap</span>
+        </button>
       </div>
       <div class="sign">
         <span class="login_sign_text">KAYDOLUN</span>
