--- a/base_urunler.html
+++ b/base_urunler.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DB Proje Ödevi</title>
-    <link rel="stylesheet" href="sign.css" />
+    <link rel="stylesheet" href="base_urunler.css" />
     <script
       src="https://kit.fontawesome.com/d497048b92.js"
       crossorigin="anonymous"
@@ -117,64 +117,86 @@
         </div>
 
         <div class="header3">
-          <a href="#" id="search_button">Ara</a>
-          <!-- <a href="#">Giriş Yap</a> -->
-          <a href="index.html">Ana Sayfa</a>
-          <a href="login_sign.html">Giriş Yap</a>
+          <a href="#">Ara</a>
+          <a href="profil.html">Profil</a>
           <a href="#">Yardım</a>
-          <!-- <a href="#">Kayıt</a> -->
         </div>
       </div>
     </header>
 
-    <section class="sign">
-      <span class="sign_header_text">KİŞİSEL BİLGİLER</span>
-      <input type="email" size="30px" placeholder="E-MAİL" class="sign_input" />
-
-      <div class="passwordss">
-        <input
-          type="password"
-          size="30px"
-          placeholder="PAROLA"
-          class="sign_input"
+    <section class="products">
+      <div class="product">
+        <img
+          src="https://static.zara.net/photos///2022/I/0/1/p/3046/241/706/2/w/608/3046241706_2_1_1.jpg?ts=1661516394526"
+          alt=""
         />
-        <input
-          type="password"
-          size="30px"
-          placeholder="ŞİFRE TEKRAR"
-          class="sign_input"
-          id="margin_left"
-        />
-      </div>
-
-      <div class="name_surname">
-        <input type="text" size="30px" placeholder="İSİM" class="sign_input" />
-        <input
-          type="text"
-          size="30px"
-          placeholder="SOYİSİM"
-          class="sign_input"
-          id="margin_left"
-        />
-      </div>
-
-      <div class="kurallar">
-        <div class="kural1">
-          <input type="checkbox" class="input_checkbox" />
-          <span class="kural_aciklama"
-            >E-POSTA ADRESİME ZARA İLE İLGİLİ HABERLERİN GELMESİNİ
-            İSTİYORUM</span
-          >
-        </div>
-
-        <div class="kural2">
-          <input type="checkbox" />
-          <span class="kural_aciklama">GİZLİLİK BEYANINI KABUL EDİYORUM.</span>
+        <div class="product_information">
+          <div class="product_name"></div>
+          <div class="add_product"></div>
+          <div class="product_price"></div>
         </div>
       </div>
-
-      <button class="login_sign_button"><span> Hesap Oluştur</span></button>
+      <div class="product">
+        <img
+          src="https://static.zara.net/photos///2022/I/0/1/p/3046/241/706/2/w/608/3046241706_2_1_1.jpg?ts=1661516394526"
+          alt=""
+        />
+        <div class="product_information">
+          <div class="product_name"></div>
+          <div class="add_product"></div>
+          <div class="product_price"></div>
+        </div>
+      </div>
+      <div class="product">
+        <img
+          src="https://static.zara.net/photos///2022/I/0/1/p/3046/241/706/2/w/608/3046241706_2_1_1.jpg?ts=1661516394526"
+          alt=""
+        />
+        <div class="product_information">
+          <div class="product_name"></div>
+          <div class="add_product"></div>
+          <div class="product_price"></div>
+        </div>
+      </div>
+      <div class="product">
+        <img
+          src="https://static.zara.net/photos///2022/I/0/1/p/3046/241/706/2/w/608/3046241706_2_1_1.jpg?ts=1661516394526"
+          alt=""
+        />
+        <div class="product_information">
+          <div class="product_name"></div>
+          <div class="add_product"></div>
+          <div class="product_price"></div>
+        </div>
+      </div>
+      <div class="product">
+        <img
+          src="https://static.zara.net/photos///2022/I/0/1/p/3046/241/706/2/w/608/3046241706_2_1_1.jpg?ts=1661516394526"
+          alt=""
+        />
+        <div class="product_information">
+          <div class="product_name"></div>
+          <div class="add_product"></div>
+          <div class="product_price"></div>
+        </div>
+      </div>
+      <div class="product">
+        <img
+          src="https://static.zara.net/photos///2022/I/0/1/p/3046/241/706/2/w/608/3046241706_2_1_1.jpg?ts=1661516394526"
+          alt=""
+        />
+        <div class="product_information">
+          <div class="product_name"></div>
+          <div class="add_product"></div>
+          <div class="product_price"></div>
+        </div>
+      </div>
     </section>
+    <!-- <section class="long_main_page">
+      <div class="fixed_man_child_left"><p>Kadın</p></div>
+      <div class="fixed_man_child_right"><p>Çocuk</p></div>
+      <div class="fixed_bottom">bottom</div>
+    </section> -->
 
     <script src="myHeader.js"></script>
   </body>
