--- a/profil.html
+++ b/profil.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DB Proje Ödevi</title>
-    <link rel="stylesheet" href="sign.css" />
+    <link rel="stylesheet" href="profile.css" />
     <script
       src="https://kit.fontawesome.com/d497048b92.js"
       crossorigin="anonymous"
@@ -35,7 +35,7 @@
 
     <div id="show_kadin_products">
       <ul class="list_no_underline">
-        <li>Yeni Gelenler</li>
+        <li><a href="base_urunler.html">Yeni Gelenler</a></li>
         <li>Çok Satanlar</li>
         <li>Basic</li>
         <li>Kaban</li>
@@ -117,64 +117,42 @@
         </div>
 
         <div class="header3">
-          <a href="#" id="search_button">Ara</a>
-          <!-- <a href="#">Giriş Yap</a> -->
-          <a href="index.html">Ana Sayfa</a>
-          <a href="login_sign.html">Giriş Yap</a>
+          <a href="#">Ara</a>
           <a href="#">Yardım</a>
-          <!-- <a href="#">Kayıt</a> -->
         </div>
       </div>
     </header>
 
-    <section class="sign">
-      <span class="sign_header_text">KİŞİSEL BİLGİLER</span>
-      <input type="email" size="30px" placeholder="E-MAİL" class="sign_input" />
-
-      <div class="passwordss">
-        <input
-          type="password"
-          size="30px"
-          placeholder="PAROLA"
-          class="sign_input"
-        />
-        <input
-          type="password"
-          size="30px"
-          placeholder="ŞİFRE TEKRAR"
-          class="sign_input"
-          id="margin_left"
-        />
-      </div>
-
-      <div class="name_surname">
-        <input type="text" size="30px" placeholder="İSİM" class="sign_input" />
-        <input
-          type="text"
-          size="30px"
-          placeholder="SOYİSİM"
-          class="sign_input"
-          id="margin_left"
-        />
-      </div>
-
-      <div class="kurallar">
-        <div class="kural1">
-          <input type="checkbox" class="input_checkbox" />
-          <span class="kural_aciklama"
-            >E-POSTA ADRESİME ZARA İLE İLGİLİ HABERLERİN GELMESİNİ
-            İSTİYORUM</span
-          >
-        </div>
-
-        <div class="kural2">
-          <input type="checkbox" />
-          <span class="kural_aciklama">GİZLİLİK BEYANINI KABUL EDİYORUM.</span>
+    <section class="profile">
+      <div class="adreslerim">
+        <p class="yazilar">Adreslerim</p>
+        <!-- <p>Adres Bilginiz Bulunmamaktadır.</p> -->
+        <div class="buttons">
+          <div class="button">Button1</div>
+          <div class="button">Button2</div>
         </div>
       </div>
-
-      <button class="login_sign_button"><span> Hesap Oluştur</span></button>
+      <div class="kayitli-kartlarim">
+        <p class="yazilar">Kayıtlı Kartlarım</p>
+        <div class="buttons">
+          <div class="button">Button1</div>
+          <div class="button">Button2</div>
+        </div>
+      </div>
+      <div class="siparislerim">
+        <p class="yazilar">Siparişlerim</p>
+        <div class="buttons">
+          <div class="button">Button1</div>
+          <div class="button">Button2</div>
+        </div>
+      </div>
     </section>
+
+    <!-- <section class="long_main_page">
+      <div class="fixed_man_child_left"><p>Kadın</p></div>
+      <div class="fixed_man_child_right"><p>Çocuk</p></div>
+      <div class="fixed_bottom">bottom</div>
+    </section> -->
 
     <script src="myHeader.js"></script>
   </body>
